Last minute edits.

--- a/2022-talk/presentation/presentation.tex
+++ b/2022-talk/presentation/presentation.tex
@@ -126,7 +126,7 @@
 %	PRESENTATION INFORMATION
 %----------------------------------------------------------------------------------------
 
-\title[LUST 2019]{The Use of Lattice Upstream Targeting for the Analysis of mRNA Expression for Cancers} % The short title in the optional parameter appears at the bottom of every slide, the full title in the main parameter is only on the title page
+\title[LUST 2019]{The LUST Algorithm: A Discrete Mathematical Method for Analyzing Genetic Expression Data} % The short title in the optional parameter appears at the bottom of every slide, the full title in the main parameter is only on the title page
 
 \subtitle{LUST 2019} % Presentation subtitle, remove this command if a subtitle isn't required
 
@@ -199,7 +199,7 @@
             \item The second run is supervised on the expression matrices for each metagene. This pass identifies small predictive \emph{signiatures} for each metagene.
         \end{enumerate}
         \pause
-        \item Certain signiatures, particularly those related to prcesses involved with immune system response, would seem approprite to use as guides for treatment.
+        \item Certain signiatures, particularly those related to processes involved with immune system response, would seem approprite to use as guides for treatment.
     \end{itemize}
 \end{frame}
 
