Random data table put in slides.

--- a/2022-talk/presentation/presentation.tex
+++ b/2022-talk/presentation/presentation.tex
@@ -223,6 +223,28 @@
 
 %------------------------------------------------
 \begin{frame}
+	\frametitle{An Example: Raw Data}
+	\begin{table}
+        \begin{tabular}{|l|l|l|l|l|}
+        \hline
+        0.7282 & -0.6965 & -0.1177 & -0.4713 & -0.4377 \\ \hline
+        0.3909 & -0.5468 & 0.1620 & -1.1057 & 0.6977 \\ \hline
+        2.2909 & -0.7040 & 0.2556 & 0.6545 & 1.1792 \\ \hline
+        -1.0335 & 1.4561 & 0.0271 & -0.4533 & -1.2070 \\ \hline
+        -0.7702 & 1.7896 & -0.3260 & -1.1195 & -0.1820 \\ \hline
+    \end{tabular}
+    \end{table}
+
+    \begin{itemize}
+        \pause
+        \item Each row in the table represents a single genetic marker.
+        \pause
+        \item Each column in the table represents a single patient.
+    \end{itemize}
+\end{frame}
+
+%------------------------------------------------
+\begin{frame}
 	\frametitle{Data Discretization}
 	
 	\begin{itemize}
